# glasses-scraper

./: .gitignore  README.md  config.yaml  pyproject.toml
app/: main.py
app/static/: style.css
app/templates/: base.html  index.html
docs/: 00-vision.md  01-requirements.md  02-architecture.md  03-tdd-plan.md  04-decisions.md  05-progress.md  06-review-feedback.md
src/: config.py  filters.py  models.py  validators.py
tests/: test_app.py
tests/unit/: test_config.py  test_filters.py  test_models.py  test_validators.py
